--- a/Toxic comment classifier.ipynb
+++ b/Toxic comment classifier.ipynb
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +699,7 @@
        "', , stopwords , computer'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +730,7 @@
        "'Some important text'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +757,7 @@
        "'Some Accented text'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -782,7 +782,7 @@
        "'You all can not expand contractions I would think'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +822,7 @@
        "'Well this was fun What do you think '"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,11 +857,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['comment_text'] = df['comment_text'].apply(lambda x: clean_comment(x))"
+    "#df['comment_text'] = df['comment_text'].apply(lambda x: clean_comment(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'my system keep crash ! his crashed yesterday , ours crash daily'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "#python -m spacy download en_core_web_sm\n",
+    "nlp = spacy.load('en_core_web_sm')\n",
+    "def lemmatize_text(text):\n",
+    "    text = nlp(text)\n",
+    "    text = ' '.join([word.lemma_ if word.lemma_ != '-PRON-' else word.text for word in text])\n",
+    "    return text\n",
+    "\n",
+    "lemmatize_text(\"My system keeps crashing! his crashed yesterday, ours crashes daily\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def normalize_corpus(corpus, html_stripping=True, contraction_expansion=True,\n",
+    "                     accented_char_removal=True, text_lower_case=True, \n",
+    "                     text_lemmatization=True, special_char_removal=True, \n",
+    "                     stopword_removal=True, remove_digits=True):\n",
+    "    \n",
+    "    normalized_corpus = []\n",
+    "    # normalize each document in the corpus\n",
+    "    for doc in corpus:\n",
+    "        # strip HTML\n",
+    "        if html_stripping:\n",
+    "            doc = strip_html_tags(doc)\n",
+    "        # remove accented characters\n",
+    "        if accented_char_removal:\n",
+    "            doc = remove_accented_chars(doc)\n",
+    "        # expand contractions    \n",
+    "        if contraction_expansion:\n",
+    "            doc = expand_contractions(doc)\n",
+    "        # lowercase the text    \n",
+    "        if text_lower_case:\n",
+    "            doc = doc.lower()\n",
+    "        # remove extra newlines\n",
+    "        doc = re.sub(r'[\\r|\\n|\\r\\n]+', ' ',doc)\n",
+    "        # lemmatize text\n",
+    "        if text_lemmatization:\n",
+    "            doc = lemmatize_text(doc)\n",
+    "        # remove special characters and\\or digits    \n",
+    "        if special_char_removal:\n",
+    "            # insert spaces between special characters to isolate them    \n",
+    "            special_char_pattern = re.compile(r'([{.(-)!}])')\n",
+    "            doc = special_char_pattern.sub(\" \\\\1 \", doc)\n",
+    "            doc = remove_special_characters(doc, remove_digits=remove_digits)  \n",
+    "        # remove extra whitespace\n",
+    "        doc = re.sub(' +', ' ', doc)\n",
+    "        # remove stopwords\n",
+    "        if stopword_removal:\n",
+    "            doc = remove_stopwords(doc, is_lower_case=text_lower_case)\n",
+    "            \n",
+    "        normalized_corpus.append(doc)\n",
+    "        \n",
+    "    return normalized_corpus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# news_df.to_csv('news.csv', index=False, encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-b346cc9753b8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Let's look at the character length for the rows in the training data and record these\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'char_length'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'comment_text'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;31m# look at the histogram plot for text length\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0msns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'char_length'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Let's look at the character length for the rows in the training data and record these\n",
+    "data['char_length'] = data['comment_text'].apply(lambda x: len(str(x)))\n",
+    "# look at the histogram plot for text length\n",
+    "sns.set()\n",
+    "data['char_length'].hist()\n",
+    "plt.show()"
    ]
   },
   {
